# Projet-RDC-PICH

./: .gitignore  README.md  project
2006_03_TransChlor/: CGraph.vb  Chloride_transport.sln.old  Chloride_transport.vbproj  Compute.vb  MDIChlor.resx  MDIChlor.vb  UpgradeLog.XML  UpgradeLog.htm  UpgradeLog2.htm  declarations.vb  frmChlor.vb  frmSplash.resx
2006_03_TransChlor/@TransChlor/: @TransChlor.vdproj
2006_03_TransChlor/@TransChlor/Debug/: Setup.Ini
2006_03_TransChlor/Backup/: CGraph.vb  Chloride_transport.sln  Chloride_transport.vbproj  Compute.vb  frmChlor.resx  frmChlor.vb  frmSplash.vb
2006_03_TransChlor/Points/: P_Copie de lunk_day_wc04.txt  P_lunk_day_wc04.txt
2006_03_TransChlor/Thomas/@TransChlor2019/: @TransChlor2019.sln
Solver/TransFoam/: Allwclean
TransFoam/TransFoam/: TransFoam.cpp  TransFoam.h
TransFoam_test/: CMakeLists.txt
TransFoam_test/TransFoam/: CMakeLists.txt  TransFoam.cpp
run/DryingTest/: Simu.ogv
run/DryingTest/0/: T  U
run/DryingTest/100800/: T  U  phi
run/DryingTest/104400/: T  U  phi
run/DryingTest/10800/: T  U  phi
run/DryingTest/108000/: T  U  phi
run/DryingTest/111600/: T  U  phi
run/DryingTest/115200/: T  U  phi
run/DryingTest/118800/: T  U  phi
run/DryingTest/122400/: T  U  phi
run/DryingTest/126000/: T  U  phi
run/DryingTest/129600/: T  U  phi
run/DryingTest/133200/: T  U  phi
run/base_sechage_cylindre/: transportProperties
run/pitzDaily/: clean
transFoam1/transFoam1/: transFoam1.cpp  transFoam1.h
transFoam_V0_Xuande/: Allwmake
ttt/ttt/: CMakeLists.txt  ttt.cpp  ttt.h
(+528 files in other folders)
